# dbtcore-bigquery-aovivo

./: .gitignore  .sqlfluff  .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
macros/: cents_to_dollars.sql
models/mart/: customer_order_totals.sql  customer_order_totals.yml
models/staging/: _econ__sources.yml  calendar_table.sql  customers.yml  order_items.yml  stg_customers.md  stg_customers.sql  stg_locations copy.sql  stg_locations.sql  stg_orders.sql  stg_orders.yml  stg_products.sql  stg_supplies.sql
seeds/: raw_items.csv  raw_stores.csv
snapshots/: stores_snapshot.sql
