[tool.poetry]
name = "dbtcore-bigquery-aovivo"
version = "0.1.0"
description = "somente o repositorio do workshop"
authors = ["lvgalvaofilho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
dbt-core = "^1.8.2"
dbt-bigquery = "^1.8.1"
sqlfluff-templater-dbt = "^3.0.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
sqlfluff = "^3.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
